<resources>
	<string name="app_name">Choices</string>
	<string name="action_settings">Settings</string>
	<string name="section_format">Hello World from section: %1$d</string>

	<!-- AUTONOMOUS -->
	<string name="alliance_header">Alliances</string>
	<string name="delay_header">Starting Delay in Seconds</string>
	<string name="starting_position_header">Starting Position</string>
	<string name="choices_header">Choices</string>

	<string name="blue_alliance">Blue alliance</string>
	<string name="red_alliance">Red alliance</string>

	<string name="starting_position_left">Left starting position</string>
	<string name="starting_position_right">Right starting position</string>

	<string name="beacon_1">Beacon 1</string>
	<string name="beacon_2">Beacon 2</string>
	<string name="park_on_center_vortex_partially">Park on center vortex partially and hit cap ball</string>
	<string name="park_on_corner_vortex">Park on corner vortex</string>
	<string name="block_opposing_team">Block opposing team</string>

	<string name="default_delay_value">0</string>

	<!-- DIAGNOSTICS -->
	<string name="motors_header">Motors</string>
	<string name="base_motors">Base Motors</string>
	<string name="frontright_wheel">FrontRight Wheel</string>
	<string name="frontleft_wheel">FrontLeft Wheel</string>
	<string name="backright_wheel">BackRight Wheel</string>
	<string name="backleft_wheel">BackLeft Wheel</string>
	<string name="platform_movement">Platform Movement</string>
	<string name="forwards">Forwards</string>
	<string name="backwards">Backwards</string>
	<string name="sideways_right">Sideways Right</string>
	<string name="sideways_left">Sideways Left</string>
	<string name="diagonal">Diagonal</string>
	<string name="worm_drive_motor">Worm Drive</string>
	<string name="launcher_motor">Launcher</string>
	<string name="intake_motor">Intake</string>
	<string name="lift_motor">Lift</string>

	<string name="servos_header">Servos</string>
	<string name="intake_gate_servo_front">Intake gate front</string>
	<string name="intake_gate_servo_rear">Intake gate rear</string>
	<string name="beacon_servo_left">Beacon left</string>
	<string name="beacon_servo_right">Beacon right</string>
	<string name="capball_servo">Capball</string>
	<string name="flag_servo">Flag</string>

	<string name="sensors_header">Sensors</string>
	<string name="floor_color_sensor">Floor color</string>
	<string name="beacon_color_sensor_left">Beacon color left</string>
	<string name="beacon_color_sensor_right">Beacon color right</string>
	<string name="launcher_limit_touch_sensor">Launcher limit touch</string>
	<string name="lift_limit_touch_sensor">Lift limit touch</string>
	<string name="range_sensor">Range</string>
	<string name="eopd_sensor">EOPD</string>
	<string name="gyro_sensor">Gyro</string>


	<string name="save_to_file">Save Choices</string>
</resources>
