<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context="org.pacar_robotics.choices.MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			style="@style/HeaderTextView"
			android:text="@string/alliance_header"/>

		<RadioGroup
			android:id="@+id/radio_choices"
			style="@style/EncapsulatingView">

			<RadioButton
				android:id="@+id/radio_choice1"
				style="@style/RadioCheckBox"
				android:text="@string/blue_alliance"/>

			<RadioButton
				android:id="@+id/radio_choice2"
				style="@style/RadioCheckBox"
				android:text="@string/red_alliance"/>
		</RadioGroup>


		<TextView
			style="@style/HeaderTextView"
			android:text="@string/starting_position_header"/>

		<RadioGroup
			style="@style/EncapsulatingView">

			<RadioButton
				style="@style/RadioCheckBox"
				android:text="@string/starting_position_1"/>

			<RadioButton
				style="@style/RadioCheckBox"
				android:text="@string/starting_position_2"/>
		</RadioGroup>


		<TextView
			style="@style/HeaderTextView"
			android:text="@string/choices_header"/>

		<LinearLayout
			style="@style/EncapsulatingView"
			android:orientation="vertical">

			<CheckBox
				style="@style/RadioCheckBox"
				android:text="@string/beacon_1"/>

			<CheckBox
				style="@style/RadioCheckBox"
				android:text="@string/beacon_2"/>

			<CheckBox
				style="@style/RadioCheckBox"
				android:text="@string/park_on_center_vortex_partially"/>

			<CheckBox
				style="@style/RadioCheckBox"
				android:text="@string/park_on_corner_vortex"/>

			<CheckBox
				style="@style/RadioCheckBox"
				android:text="@string/block_opposing_team"/>
		</LinearLayout>


		<TextView
			style="@style/HeaderTextView"
			android:text="@string/delay_header"/>

		<LinearLayout
			style="@style/EncapsulatingView"
			android:orientation="horizontal">

			<SeekBar
				android:id="@+id/seek_delay"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:max="30"/>

			<TextView
				android:id="@+id/text_delay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/default_delay_value"/>
		</LinearLayout>


		<Button
			android:id="@+id/btn_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/save_to_file"/>

	</LinearLayout>
</ScrollView>