<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            tools:context=".DiagnosticsFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/default_space_margin">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/motors_check_all"
				style="@style/HeaderCheckBoxDiag"/>

			<TextView
				android:id="@+id/motors_header"
				style="@style/CheckBoxHeaderTextView"
				android:text="@string/motors_header"/>
		</LinearLayout>


		<LinearLayout
			style="@style/EncapsulatingView.Diagnostics"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/base_motor_check_all"
				style="@style/CheckBoxDiag"
				android:text="@string/base_motors"/>

			<LinearLayout
				style="@style/EncapsulatingView.Diagnostics.NextLevel"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/front_right_wheel"
					style="@style/CheckBoxDiag"
					android:text="@string/frontright_wheel"/>

				<CheckBox
					android:id="@+id/front_left_wheel"
					style="@style/CheckBoxDiag"
					android:text="@string/frontleft_wheel"/>

				<CheckBox
					android:id="@+id/back_right_wheel"
					style="@style/CheckBoxDiag"
					android:text="@string/backright_wheel"/>

				<CheckBox
					android:id="@+id/back_left_wheel"
					style="@style/CheckBoxDiag"
					android:text="@string/backleft_wheel"/>
			</LinearLayout>

			<CheckBox
				android:id="@+id/platform_movement_check_all"
				style="@style/CheckBoxDiag"
				android:text="@string/platform_movement"/>

			<LinearLayout
				style="@style/EncapsulatingView.Diagnostics.NextLevel"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/forwards_platform"
					style="@style/CheckBoxDiag"
					android:text="@string/forwards"/>

				<CheckBox
					android:id="@+id/backwards_platform"
					style="@style/CheckBoxDiag"
					android:text="@string/backwards"/>

				<CheckBox
					android:id="@+id/right_platform"
					style="@style/CheckBoxDiag"
					android:text="@string/sideways_right"/>

				<CheckBox
					android:id="@+id/left_platform"
					style="@style/CheckBoxDiag"
					android:text="@string/sideways_left"/>
			</LinearLayout>

			<CheckBox
				android:id="@+id/worm_drive_motor"
				style="@style/CheckBoxDiag"
				android:text="@string/worm_drive_motor"/>

			<CheckBox
				android:id="@+id/launcher_motor"
				style="@style/CheckBoxDiag"
				android:text="@string/launcher_motor"/>

			<CheckBox
				android:id="@+id/intake_motor"
				style="@style/CheckBoxDiag"
				android:text="@string/intake_motor"/>

			<CheckBox
				android:id="@+id/lift_motor"
				style="@style/CheckBoxDiag"
				android:text="@string/lift_motor"/>
		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/servos_check_all"
				style="@style/HeaderCheckBoxDiag"/>

			<TextView
				android:id="@+id/servos_header"
				style="@style/CheckBoxHeaderTextView"
				android:text="@string/servos_header"/>
		</LinearLayout>

		<LinearLayout
			style="@style/EncapsulatingView.Diagnostics"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/intake_gate_servo"
				style="@style/CheckBoxDiag"
				android:text="@string/intake_gate_servo"/>

			<CheckBox
				android:id="@+id/beacon_servo"
				style="@style/CheckBoxDiag"
				android:text="@string/beacon_servo"/>

			<CheckBox
				android:id="@+id/capball_servo"
				style="@style/CheckBoxDiag"
				android:text="@string/capball_servo"/>
		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/sensors_check_all"
				style="@style/HeaderCheckBoxDiag"/>

			<TextView
				android:id="@+id/sensors_header"
				style="@style/CheckBoxHeaderTextView"
				android:text="@string/sensors_header"/>
		</LinearLayout>

		<LinearLayout
			style="@style/EncapsulatingView.Diagnostics"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/floor_color_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/floor_color_sensor"/>

			<CheckBox
				style="@style/CheckBoxDiag"
				android:id="@+id/beacon_color_sensor"
				android:text="@string/beacon_color"/>

			<CheckBox
				android:id="@+id/beacon_touch_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/beacon_touch_sensor"/>

			<CheckBox
				android:id="@+id/launcher_limit_touch_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/launcher_limit_touch_sensor"/>

			<CheckBox
				android:id="@+id/lift_limit_touch_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/lift_limit_touch_sensor"/>

			<CheckBox
				android:id="@+id/ultrasonic_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/ultrasonic_sensor"/>

			<CheckBox
				android:id="@+id/gyro_sensor"
				style="@style/CheckBoxDiag"
				android:text="@string/gyro_sensor"/>
		</LinearLayout>


		<Button
			android:id="@+id/btn_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/save_to_file"/>
	</LinearLayout>
</ScrollView>
